--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<html><head>
+<html>
+  
+  <head>
     <title>Daihan Zhu</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    
-  <link rel="stylesheet" href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css"></head><body>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
+    rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  
+  <body>
     <div class="cover">
       <div class="navbar navbar-default">
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -98,7 +103,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive">
+            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png"
+            class="img-responsive">
           </div>
           <div class="col-md-6">
             <h3>A subtitle</h3>
@@ -152,6 +158,6 @@
         </div>
       </div>
     </footer>
-  
+  </body>
 
-</body></html>
+</html>
