--- a/nutrifence.html
+++ b/nutrifence.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/NutiFence_Mockup.png" class="img-responsive">
+            <img src="NutiFence_Mockup.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
