--- a/nutrifence.html
+++ b/nutrifence.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="NutiFence_Mockup.png" class="img-responsive">
+            <img src="https://github.com/daihanzhu/daihanzhu.github.io/blob/master/Website_images_2017-01.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
