--- a/nutrifence.html
+++ b/nutrifence.html
@@ -138,7 +138,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-03.png" class="img-responsive">
+            <img src="Website_images_2017-03.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
