--- a/nutrifence.html
+++ b/nutrifence.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="https://github.com/daihanzhu/daihanzhu.github.io/blob/master/Website_images_2017-01.png" class="img-responsive">
+            <img src="Website_images_2017-01.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -176,7 +176,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-02.png" class="img-responsive">
+            <img src="Website_images_2017-02.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -206,7 +206,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-04.png" class="img-responsive">
+            <img src="Website_images_2017-04.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -246,7 +246,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-05.png" class="img-responsive">
+            <img src="Website_images_2017-05.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
