--- a/ASU.html
+++ b/ASU.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-16.png" class="img-responsive">
+            <img src="Website_images_2017-16.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-17.png" class="img-responsive">
+            <img src="Website_images_2017-17.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -123,7 +123,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-18.png" class="img-responsive">
+            <img src="Website_images_2017-18.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
