--- a/Planit.html
+++ b/Planit.html
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-19.png" class="img-responsive">
+            <img src="Website_images_2017-19.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-21.png" class="img-responsive">
+            <img src="Website_images_2017-21.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-21.png" class="img-responsive">
+            <img src="Website_images_2017-21.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -121,7 +121,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-20.png" class="img-responsive">
+            <img src="Website_images_2017-20.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
