--- a/starrynight.html
+++ b/starrynight.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-10.png" class="img-responsive">
+            <img src="Website_images_2017-10.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -73,7 +73,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="Website Images/Website_images_2017-06.png" class="img-responsive">
+            <img src="Website_images_2017-06.png" class="img-responsive">
             <p></p>
             <p></p>
           </div>
@@ -108,7 +108,7 @@
             <p></p>
             <p class="text-left"></p>
             <p></p>
-          </div><img src="Website Images/Website_images_2017-15.png" class="img-responsive"><p class="text-left"></p>
+          </div><img src="Website_images_2017-15.png" class="img-responsive"><p class="text-left"></p>
         </div>
       </div>
     </div>
