--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
           <div class="row">
             <div class="col-md-6">
               <a href="nutrifence.html">
-            <img src="Website Images/Website_images_2017-07.png" class="img-responsive">
+            <img src="Website_images_2017-07.png" class="img-responsive">
               </a>
               <p></p>
               <p></p>
             </div>
             <div class="col-md-6">
               <a href="ASU.html">
-            <img src="Website Images/Website_images_2017-09.png" class="img-responsive">
+            <img src="Website_images_2017-09.png" class="img-responsive">
               </a>
               <p></p>
               <p></p>
@@ -104,14 +104,14 @@
           <div class="row">
             <div class="col-md-6">
               <a href="Planit.html">
-            <img src="Website Images/Website_images_2017-08.png" class="img-responsive">
+            <img src="Website_images_2017-08.png" class="img-responsive">
             </a>
               <p></p>
               <p></p>
             </div>
             <div class="col-md-6">
               <a href="starrynight.html">
-            <img src="Website Images/Website_images_2017-10.png" class="img-responsive">
+            <img src="Website_images_2017-10.png" class="img-responsive">
               </a>
               <p></p>
               <p></p>
