--- a/ASU.html
+++ b/ASU.html
@@ -87,7 +87,7 @@
             <p></p>
           </div>
           <div class="col-md-6">
-            <h1>Social Media Management&nbsp;</h1>
+            <h1>Social Media&nbsp;</h1>
             <p></p>
             <p class="text-left">
               <br>Aside from website management, I also manage all of ASU’s social media
