--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="starrynight.css">
+    <link rel="shortcut icon" href="dz.ico" type="image/x-icon">
   </head><body>
     <div class="spinner-layer spinner-green">
       <div class="circle-clipper left">
