--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 						<a href="index.html" id="design-link" class="active">design</a>
 					</li>
 					<li>
-						<a href="stories.html" id="stories-link">stories</a>
+						<a href="https://medium.com/@daihan" target="_blank" id="stories-link">stories</a>
 					</li>
 					<li>
-						<a href="about.html" id="about-link">about</a>
+						<a href="https://www.linkedin.com/in/daihan/" target="_blank" id="about-link">about</a>
 					</li>
 				</nav>
 
@@ -33,8 +33,8 @@
 			</div>
 
 			<div class="content-main">
-			<h1>Hello, I'm Daihan.</h1>
-			<p> I'm a designer from the praries, currently interning at <a href="http://www.rbcroyalbank.com/" target="_blank" >RBC</a></p>
+			<h1>Hello, thanks for stopping by. Daihan is currently coding day and night so you can have a look at her work.</h1>
+			<p> Meanwhile, please go say hi on <a href="https://www.linkedin.com/in/daihan/" target="_blank" >Linkedin</a></p>
 			</div>
 		</div>
 		
