--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
 			</div>
 
 			<div class="content-main">
-			<h1>Hello, thanks for stopping by. Daihan is currently coding day and night so you can have a look at her work.</h1>
-			<p> Meanwhile, please go say hi on <a href="https://www.linkedin.com/in/daihan/" target="_blank" >Linkedin</a></p>
+			<h1>Hi! Thanks for stopping by. Daihan is currently coding day and night so you can have a look at her work.</h1>
+			<p> Meanwhile, you can find her on <a href="https://www.linkedin.com/in/daihan/" target="_blank" >Linkedin</a>
+						<a href="https://twitter.com/daihanzhu" target="_blank" >Twitter</a> and
+				           <a href="https://www.instagram.com/dianezhu/" target="_blank" >Instagram</a>.
+				                    </p>
 			</div>
 		</div>
 		
