--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<div class="container">
 	 <div class="header">
-	<img src="img/horse.svg" align="center" width=400px>
+	<img src="horse.svg" align="center" width=400px>
 		<div class="row">
                 <h1>From the Prairies</h1>
                    <p>I'm a human-centered designer infused with the passion for<br>building innovative and diverse communities</p>      
