--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html" class="underline">Design</a></li>
-					<li><a href="stories.html" class="underline">Stories</a></li>
-					<li><a href="about.html" class="underline">About</a></li>
+					<li><a href="https://medium.com/@daihan" target="_blank" class="underline">Stories</a></li>
+					<li><a href="https://www.linkedin.com/in/daihan/" target="_blank" class="underline">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -49,14 +49,19 @@
               <div class="col-md-7" id="head" style="margin-top: 0px; margin-left: 0px;">        
                    <h2>From the Prairies</h2>
                     <hr width="10%" align="left" style=" margin-left:40px;">
-                   <p>I'm a human-centered designer infused with a passion for building innovative and diverse communities.</p>     
+                   <p>I'm a human-centered designer infused with a passion for building innovative and diverse communities.</p> 
+		      <br>
+		      <p>P.S. Daihan is currently coding day and night so you can have a look at her work, meanwhile, find her on 
+			      <a href="https://www.behance.net/daihan" target="_blank">Behance</a> 
+			      and <a href="https://www.linkedin.com/in/daihan/" target="_blank">Linkedin</a>.</p>  
+		    
 			</div>
 	</div>
 
 
     <div class="tiles" style="padding-top: 100px;">
          <img src="img/daihan.jpg" >
-    	 <img src="img/daihan.jpg" >
+    	
 	</div>
 
 
