--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Daihan | Design</title>
-	 <link rel="icon" href="img/favicon.png" type="image/x-icon" />
+	 <link rel="icon" href="favicon.png" type="image/x-icon" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Martel:200,300,800|PT+Serif" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
