--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Martel:200,300,800|PT+Serif" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,500,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
