--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html" class="underline">Design</a></li>
 					<li><a href="https://medium.com/@daihan" target="_blank" class="underline">Stories</a></li>
-					<li><a href="https://www.linkedin.com/in/daihan/" target="_blank" class="underline">About</a></li>
+					<li><a href="https://www.linkedin.com/in/daihan/" target="_blank" class="underline">Resume</a></li>
 				</ul>
 			</div>
 		</div>
@@ -53,7 +53,7 @@
                     <hr width="10%" align="left" style=" margin-left:40px;">
                    <p>I'm a human-centered designer infused with a passion for building innovative and diverse communities.</p> 
 		      <br>
-		      <p>P.S. Daihan is currently coding day and night so you can have a look at her work, meanwhile, find her on 
+		      <p>P.S. I'm currently coding day and night so you can have a look at my work, meanwhile, find me on 
 			      <a href="https://www.behance.net/daihan" target="_blank">Behance</a> 
 			      and <a href="https://www.linkedin.com/in/daihan/" target="_blank">Linkedin</a>.</p>  
 		    
