--- a/asu.html
+++ b/asu.html
@@ -54,7 +54,7 @@
 		<div class="row">
 			<div class="col-md-12">
 
-			 <img src="img/quad.jpg">
+			 <img src="img/quad.JPG">
 
 		    </div>
 		</div>
