--- a/asu.html
+++ b/asu.html
@@ -89,7 +89,7 @@
 		<div class="row">
 			<div class="col-md-12">
 
-			 <img src="img/ASUMock.png">
+			 <img src="img/asuMock.png">
 
 		    </div>
 		</div>
