--- a/stories.html
+++ b/stories.html
@@ -46,7 +46,7 @@
                    <h2><font color="#2439a0">I like writing stuff</h2>
                     <hr width="10%" align="left" style=" margin-left:40px;">
 
-                   <p>Stories, blogs, poems, <del>witty</del> Instagram captions, and a million other things in multicoloured post-it notes. My weapon of choice is a Fine Tip Sharpie but I also treasure my Copic dearly.</p> 
+                   <p>Stories, blogs, poems, <del>witty</del> Instagram captions, and a million other things in multicoloured post-it notes. My weapon of choice is a Fine Tip Sharpie but I also treasure my Copics dearly.</p> 
                    
                    <svg width="50" height="43" style="padding-left:40px; padding-top: 7px;">
                       <rect width="50px" height="43px"  style="fill:#ef4a4a;"/>
