--- a/stories.html
+++ b/stories.html
@@ -137,7 +137,8 @@
                    <ol style="list-style-type:none" align="left">
                    <li><a href="https://medium.com/@daihan/what-has-university-taught-me-so-far-40516e044bfd" target="_blank">What has University Taught Me so Far</a></li>
                    <li><a href="https://medium.com/@daihan/tell-more-dumb-stories-f590ff4af0bd" target="_blank">Tell More Dumb Stories</a></li>
-                   <li><a href="" target="_blank"></a></li>
+                   <li><a href="https://medium.com/@daihan/5-things-you-can-do-at-your-1st-hackathon-a063467ab0ef" target="_blank">5 Things you can do at your First Hackathon</a></li>
+	           <li><a href="" target="_blank"></a></li>
                  
                    </ol>
                  </div>
