--- a/stories.html
+++ b/stories.html
@@ -87,7 +87,7 @@
                    <ol style="list-style-type:none" align="left">
                    <li><a href="https://uxdesign.cc/westjet-connect-a-ux-case-study-2c15b1888bf5" target="_blank">WestJet Connect — A UX Case Study</a></li>
 
-                   <li><a href="https://medium.com/@daihan/impacting-1-000-000-people-in-2-days-9722ea1997df" target="_blank">Impacting 1,000,000 People in 2 Day</a></li>
+                   <li><a href="https://medium.com/@daihan/impacting-1-000-000-people-in-2-days-9722ea1997df" target="_blank">Impacting 1,000,000 People in 2 Days</a></li>
                   
                    <li><a href="" target="_blank"></a></li>
                  
