Fixed duplicated blog title

--- a/stories.html
+++ b/stories.html
@@ -115,8 +115,8 @@
                    <ol style="list-style-type:none" align="left">
                    <li><a href="https://medium.com/@daihan/a-beginners-guide-to-innovation-b78be55ceda9" target="_blank">5 Things you can Innovate Right Now!</a></li>
                    <li><a href="https://medium.com/@daihan/my-first-day-as-an-intrapreneur-af1d45d2a12b" target="_blank">My First Day as an Intrapreneur</a></li>
-                   <li><a href="https://medium.com/@daihan/things-michelle-obama-said-d6c910c115e7" target="_blank">To Girls Leading the World — Words From Michelle Obama</a></li>
                  
+                     <li><a href="https://medium.com/@daihan/how-i-accidentally-became-an-entrepreneur-3c9f4050416c" target="_blank">How I Accidentally Became an Entrepreneur</a></li>
                    </ol>
                  </div>
        
